# watsonx-generic-property-v2

./: .gitignore  ai-assistant-action.json  openapi.json  readme.md  sample_en_conv.json  sample_my_conv.json
backend/property_agent/: README.md  cos_ingest.py  err.txt  es_ingest.py  es_query.py  pyproject.toml
backend/property_agent/app/: base.py  ingest.py  main.py  utils.py
backend/property_agent/knowledge/csv/: appointment.csv  lumenh.csv  nexus-one.csv  zig.csv
backend/property_agent/knowledge/csv_archive/: appointment.csv  zig-minh-connaught-sample copy.xlsx
backend/property_agent/knowledge/json/: abc-residence.json  the-lumenh.json  (+1 more)
backend/property_agent/property_json/: 28_mont_kiara.json  68__avenue.json  acacia.json  allegro.json  allevia.json  alm_s_suites.json  arcoris_plaza.json  arcoris_residences.json  arcoris_soho.json  arcoris_suites.json  arden_hill.json  aspira_gardens.json  aspira_lakehomes_phase_1_3.json  aspira_lakehomes_phase_4.json  aspira_lakehomes_phase_5a.json  aspira_lakehomes_phase_5b.json  aspira_lakehomes_phase_6a.json  aspira_lakehomes_phase_6b.json  aspira_parkhomes.json  aspira_square.json  astrea.json  aurora_melbourne_central.json  aurora_offices_suites.json  beethoven.json  begonia.json  begonia_forest_heights.json  broadhill_residence.json  camellia.json  dahlia.json  dahlia_2.json  estuari_gardens.json  eugenia.json  eugenia_2.json  frischia.json  idaman_residences.json  imperia_condominium.json  impiana.json  intrika.json  intrika_2.json  kaia_heights_equine.json  (+36 more)
backend/property_agent/sql-db/: property.db
(+160 files in other folders)
