[project]
name = "property_agent"
version = "0.1.0"
description = "run property agent using crewAI"
authors = [{ name = "Ammar Hassan", email = "ammar.hassan@ibm.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "property_agent.main:kickoff"
plot = "property_agent.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
